Bug#11746819: Bug#28928: UNIX_TIMESTAMP() should be considered unary monotonic by partition pruning

Made UNIX_TIMESTAMP MONOTONIC_INCREASING when it have TIMESTAMP argument (only).